--- a/demo.html
+++ b/demo.html
@@ -7,7 +7,10 @@
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script src="https://unpkg.com/react-scroll-sense-header@latest/dist/index.js"></script>
+    <!-- Temporary: Use local files until npm publish -->
+    <script src="./dist/ScrollSenseHeader.js"></script>
+    <script src="./dist/types.js"></script>
+    <link rel="stylesheet" href="./dist/styles.css">
     <style>
         * {
             margin: 0;
@@ -287,7 +290,8 @@
 
     <script type="text/babel">
         const { useState, useRef, useEffect } = React;
-        const { ScrollSenseHeader } = window.ReactScrollSenseHeader;
+        // Use the default export from ScrollSenseHeader.js
+        const ScrollSenseHeader = window.ScrollSenseHeader?.default || window.ScrollSenseHeader;
 
         function DemoApp() {
             const headerRef = useRef();
