--- a/demo.html
+++ b/demo.html
@@ -7,10 +7,7 @@
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <!-- Temporary: Use local files until npm publish -->
-    <script src="./dist/ScrollSenseHeader.js"></script>
-    <script src="./dist/types.js"></script>
-    <link rel="stylesheet" href="./dist/styles.css">
+    <script src="https://unpkg.com/react-scroll-sense-header@latest/dist/index.js"></script>
     <style>
         * {
             margin: 0;
@@ -290,8 +287,7 @@
 
     <script type="text/babel">
         const { useState, useRef, useEffect } = React;
-        // Use the default export from ScrollSenseHeader.js
-        const ScrollSenseHeader = window.ScrollSenseHeader?.default || window.ScrollSenseHeader;
+        const { ScrollSenseHeader } = window.ReactScrollSenseHeader;
 
         function DemoApp() {
             const headerRef = useRef();
