--- a/demo.html
+++ b/demo.html
@@ -7,7 +7,10 @@
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script src="https://unpkg.com/react-scroll-sense-header@latest/dist/index.js"></script>
+    <!-- Use local files for now -->
+    <script src="./dist/ScrollSenseHeader.js"></script>
+    <script src="./dist/index.js"></script>
+    <link rel="stylesheet" href="./dist/styles.css">
     <style>
         * {
             margin: 0;
@@ -287,8 +290,13 @@
 
     <script type="text/babel">
         const { useState, useRef, useEffect } = React;
-        // UMD build exposes ScrollSenseHeader on window.ReactScrollSenseHeader
-        const { ScrollSenseHeader } = window.ReactScrollSenseHeader || {};
+        
+        // Access the component from the UMD build
+        // The UMD build should expose it on window.ReactScrollSenseHeader
+        const ScrollSenseHeader = window.ReactScrollSenseHeader?.ScrollSenseHeader || (() => {
+            console.error('ScrollSenseHeader not found. Available:', Object.keys(window).filter(k => k.includes('ScrollSense') || k.includes('ReactScroll')));
+            return React.createElement('div', { style: { padding: '20px', background: '#ffebee', color: '#c62828' } }, 'ScrollSenseHeader component not loaded');
+        });
 
         function DemoApp() {
             const headerRef = useRef();
