--- a/demo.html
+++ b/demo.html
@@ -306,9 +306,39 @@
     <script type="text/babel">
         const { useState, useRef, useEffect } = React;
         
-        // Access the component from the UMD build
-        // The UMD build exposes ScrollSenseHeader directly on window
-        const ScrollSenseHeader = window.ScrollSenseHeader?.default || window.ScrollSenseHeader;
+        // Debug: Check what's available on window
+        console.log('Window ScrollSenseHeader:', window.ScrollSenseHeader);
+        console.log('Window ReactScrollSenseHeader:', window.ReactScrollSenseHeader);
+        console.log('All window keys containing ScrollSense:', Object.keys(window).filter(k => k.includes('ScrollSense')));
+        
+        // Try different ways to access the component
+        let ScrollSenseHeader;
+        if (window.ScrollSenseHeader && window.ScrollSenseHeader.default) {
+            ScrollSenseHeader = window.ScrollSenseHeader.default;
+            console.log('Using ScrollSenseHeader.default');
+        } else if (window.ScrollSenseHeader) {
+            ScrollSenseHeader = window.ScrollSenseHeader;
+            console.log('Using ScrollSenseHeader directly');
+        } else if (window.ReactScrollSenseHeader && window.ReactScrollSenseHeader.ScrollSenseHeader) {
+            ScrollSenseHeader = window.ReactScrollSenseHeader.ScrollSenseHeader;
+            console.log('Using ReactScrollSenseHeader.ScrollSenseHeader');
+        } else {
+            console.error('ScrollSenseHeader not found on window object');
+            // Create a fallback component
+            ScrollSenseHeader = ({ children, ...props }) => {
+                console.log('Using fallback component');
+                return React.createElement('div', { 
+                    style: { 
+                        padding: '20px', 
+                        background: '#ffebee', 
+                        color: '#c62828',
+                        border: '2px solid #c62828',
+                        borderRadius: '4px',
+                        margin: '20px'
+                    } 
+                }, 'ScrollSenseHeader component not loaded properly');
+            };
+        }
 
         function DemoApp() {
             const headerRef = useRef();
