--- a/demo.html
+++ b/demo.html
@@ -11,8 +11,8 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     
     <!-- Load our component from CDN -->
-    <script src="https://unpkg.com/react-scroll-sense-header@latest/dist/index.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/react-scroll-sense-header@latest/dist/styles.css">
+    <script src="https://unpkg.com/react-scroll-sense-header@1.0.2/dist/index.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/react-scroll-sense-header@1.0.2/dist/styles.css">
     
     <style>
         * {
